# rbmp-game

./: README.md
client/: Cargo.toml
client/src/: game_loop.rs  main.rs  networking.rs  player.rs  renderer.rs  state.rs  ui_renderer.rs
server/: Cargo.toml
server/src/: game_loop.rs  main.rs  networking.rs  player.rs  state.rs
shared/: Cargo.toml
shared/src/: bincode_ext.rs  lib.rs  packet_ext.rs  protocol.rs  tracing.rs
