[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-rc.3" }
serde = { version = "1.0.190", features = ["derive"] }
shared = { path = "../shared" }
tracing = { version = "0.1.40" }
wgpu = { version = "0.17.1" }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
quinn = "0.10.2"
imgui = "0.11.0"
imgui-wgpu = "0.24.0"
imgui-winit-support = "0.11.0"
winit = { version = "0.27.2" }
cgmath = "0.18.0"
pollster = "0.3.0"
rustls = { version = "0.21.8", features = ["dangerous_configuration"] }