[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3" }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
quinn = "0.10.2"
shared = { path = "../shared" }
tracing = { version = "0.1.40" }
rcgen = "0.11.3"
rustls = "0.21.8"
log = "0.4.20"