[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-bincode = "0.7.1"
bincode = "2.0.0-rc.3"
serde = { version = "1.0.190", features = ["derive"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17"}
bytes = "1.5.0"
cgmath = "0.18.0"